--- a/code.html
+++ b/code.html
@@ -1,24 +1,5 @@
 <html>
   <head>
-    <style>
-      .elemento{
-       width:150px;
-       height: 150px;
-       background-color:#FF00FF;
-       animation:mover-direita 3s linear infinite;
-      }
-     
-      @keyframes mover-direita{
-        0%{
-          transform:translateX(0);
-        }
-        100%{
-          transform: translateX(100%);
-        }
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
   </head>
-  <body>
-    <div class="elemento"></div>
-  </body>
 </html>
