--- a/code.html
+++ b/code.html
@@ -2,4 +2,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="estilo.css">
   </head>
+  <body>
+     <div class="elemento"></div>
+  </body>
 </html>
