--- a/code.html
+++ b/code.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="code.css">
   </head>
   <body>
      <div class="elemento"></div>
